--- a/StudentAdmission-Gradient Descent with Back Propagation.ipynb
+++ b/StudentAdmission-Gradient Descent with Back Propagation.ipynb
@@ -179,17 +179,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss:  0.19565405786560447\n",
-      "Train loss:  0.1985840115984205   WARNING - Loss Increasing\n",
-      "Train loss:  0.19858371408642028\n",
-      "Train loss:  0.19858371406699465\n",
-      "Train loss:  0.198583714066993\n",
-      "Train loss:  0.198583714066993\n",
-      "Train loss:  0.19858371406699316   WARNING - Loss Increasing\n",
-      "Train loss:  0.19858371406699316\n",
-      "Train loss:  0.19858371406699316\n",
-      "Train loss:  0.19858371406699316\n",
-      "Prediction accuracy: 0.775\n"
+      "Train loss:  0.22571551776986504\n",
+      "Train loss:  0.19704585985276044\n",
+      "Train loss:  0.1970433162015207\n",
+      "Train loss:  0.19704331519357451\n",
+      "Train loss:  0.19704331519317483\n",
+      "Train loss:  0.1970433151931745\n",
+      "Train loss:  0.19704331519317447\n",
+      "Train loss:  0.19704331519317447\n",
+      "Train loss:  0.19704331519317447\n",
+      "Train loss:  0.19704331519317447\n",
+      "Prediction accuracy: 0.800\n"
      ]
     }
    ],
@@ -232,6 +232,97 @@
     "#print(predictions)\n",
     "accuracy = np.mean(predictions == test_labels)\n",
     "print(\"Prediction accuracy: {:.3f}\".format(accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementing Back Propagation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss:  0.1740787289817364\n",
+      "Train Loss:  0.1740602723290662\n",
+      "Train Loss:  0.17404181769935584\n",
+      "Train Loss:  0.17402336509243663\n",
+      "Train Loss:  0.17400491450813985\n",
+      "Train Loss:  0.17398646594629688\n",
+      "Train Loss:  0.17396801940673892\n",
+      "Train Loss:  0.1739495748892974\n",
+      "Train Loss:  0.1739311323938038\n",
+      "Train Loss:  0.17391269192008932\n",
+      "Prediction accuracy: 0.775\n"
+     ]
+    }
+   ],
+   "source": [
+    "#paramters\n",
+    "learnrate=0.005\n",
+    "n_hidden=2\n",
+    "epochs=1000\n",
+    "\n",
+    "#np.random.seed(21)\n",
+    "\n",
+    "\n",
+    "weights_input_hidden=np.random.normal(scale=1/np.sqrt(n_features),size=(n_features,n_hidden))\n",
+    "weights_hidden_output=np.random.normal(scale=1/np.sqrt(n_features),size=n_hidden)\n",
+    "\n",
+    "last_loss=None\n",
+    "\n",
+    "for e in range(epochs):\n",
+    "    for x,y in zip(train_features.values,train_labels.values):\n",
+    "        \n",
+    "        del_w_input_hidden=np.zeros(shape=weights_input_hidden.shape)\n",
+    "        del_w_hidden_output=np.zeros(shape=weights_hidden_output.shape)\n",
+    "        \n",
+    "        #forward pass\n",
+    "        hidden_layer_input=np.dot(x,weights_input_hidden)\n",
+    "        hidden_layer_output=sigmoid(hidden_layer_input)\n",
+    "        \n",
+    "        output_layer_in=np.dot(hidden_layer_output,weights_hidden_output)\n",
+    "        output=sigmoid(output_layer_in)\n",
+    "        \n",
+    "        #backward pass\n",
+    "        \n",
+    "        error=y-output\n",
+    "        error_term=error*output*(1-output)\n",
+    "        hidden_error_term=weights_hidden_output*error_term*hidden_layer_output*(1-hidden_layer_output)\n",
+    "        \n",
+    "        del_w_hidden_output+=error_term*hidden_layer_output\n",
+    "        del_w_input_hidden+=hidden_error_term*x[:,None]\n",
+    "        \n",
+    "    #weights update\n",
+    "    \n",
+    "    weights_hidden_output+=learnrate*del_w_hidden_output/n_rows\n",
+    "    weights_input_hidden+=learnrate*del_w_input_hidden/n_rows\n",
+    "    \n",
+    "    if e%(epochs/10)==0:\n",
+    "        hidden_out=sigmoid(np.dot(x,weights_input_hidden))\n",
+    "        out=sigmoid(np.dot(hidden_out,weights_hidden_output))\n",
+    "        \n",
+    "        loss=np.mean((y-out)**2)\n",
+    "        if last_loss and last_loss<loss:\n",
+    "            print(\"Train Loss: \", loss, \"Warning-Loss Increasing\")\n",
+    "        else:\n",
+    "            print(\"Train Loss: \", loss)\n",
+    "        \n",
+    "        last_loss=loss\n",
+    "        \n",
+    "#Accuracy\n",
+    "hidden=sigmoid(np.dot(test_features,weights_input_hidden))\n",
+    "test_out=sigmoid(np.dot(hidden,weights_hidden_output))\n",
+    "predictions=test_out>0.5\n",
+    "accuracy=np.mean(predictions==test_labels)\n",
+    "print(\"Prediction accuracy: {:.3f}\".format(accuracy))            "
    ]
   }
  ],
