--- a/Projects/sentiment-network/Sentiment_Classification_Projects.ipynb
+++ b/Projects/sentiment-network/Sentiment_Classification_Projects.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "nbpresent": {
      "id": "eba2b193-0419-431e-8db9-60f34dd3fe83"
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "25000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "nbpresent": {
      "id": "bb95574b-21a0-4213-ae50-34363cf4f87f"
@@ -160,7 +160,7 @@
        "'bromwell high is a cartoon comedy . it ran at the same time as some other programs about school life  such as  teachers  . my   years in the teaching profession lead me to believe that bromwell high  s satire is much closer to reality than is  teachers  . the scramble to survive financially  the insightful students who can see right through their pathetic teachers  pomp  the pettiness of the whole situation  all remind me of the schools i knew and their students . when i saw the episode in which a student repeatedly tried to burn down the school  i immediately recalled . . . . . . . . . at . . . . . . . . . . high . a classic line inspector i  m here to sack one of your teachers . student welcome to bromwell high . i expect that many adults of my age think that bromwell high is far fetched . what a pity that it isn  t   '"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "nbpresent": {
      "id": "e0408810-c424-4ed4-afb9-1735e9ddbd0a"
@@ -184,7 +184,7 @@
        "'POSITIVE'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "nbpresent": {
      "id": "e67a709f-234f-4493-bae6-4fb192141ee0"
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create three Counter objects to store positive, negative and total counts\n",
-    "positive_counts = Counter(labels)['POSITIVE']\n",
-    "negative_counts = Counter(labels)['NEGATIVE']\n",
-    "total_counts = Counter(labels)"
+    "positive_counts = Counter()\n",
+    "negative_counts = Counter()\n",
+    "total_counts = Counter()"
    ]
   },
   {
@@ -285,13 +285,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Loop over all the words in all the reviews and increment the counts in the appropriate counter objects\n"
+    "# TODO: Loop over all the words in all the reviews and increment the counts in the appropriate counter objects\n",
+    "def counts(reviews,labels):\n",
+    "    assert len(reviews) == len(labels),\"number of reviews must be equal to number of labels\"\n",
+    "    for i in range(len(reviews)):\n",
+    "        if labels[i]=='POSITIVE':\n",
+    "            positive_counts.update(reviews[i].split(' '))\n",
+    "            total_counts.update(reviews[i].split(' '))\n",
+    "        if labels[i]=='NEGATIVE':\n",
+    "            negative_counts.update(reviews[i].split(' '))\n",
+    "            total_counts.update(reviews[i].split(' '))\n",
+    "            \n",
+    "\n",
+    "counts(reviews,labels)"
    ]
   },
   {
@@ -303,26 +313,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55214 53635 74074\n"
+     ]
+    }
+   ],
    "source": [
-    "# Examine the counts of the most common words in positive reviews\n",
-    "positive_counts.most_common()"
+    "print(len(positive_counts), len(negative_counts), len(total_counts))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('', 550468),\n",
+       " ('the', 173324),\n",
+       " ('.', 159654),\n",
+       " ('and', 89722),\n",
+       " ('a', 83688),\n",
+       " ('of', 76855),\n",
+       " ('to', 66746),\n",
+       " ('is', 57245),\n",
+       " ('in', 50215),\n",
+       " ('br', 49235),\n",
+       " ('it', 48025),\n",
+       " ('i', 40743),\n",
+       " ('that', 35630),\n",
+       " ('this', 35080),\n",
+       " ('s', 33815),\n",
+       " ('as', 26308),\n",
+       " ('with', 23247),\n",
+       " ('for', 22416),\n",
+       " ('was', 21917),\n",
+       " ('film', 20937)]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Examine the counts of the most common words in positive reviews\n",
+    "positive_counts.most_common()[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('', 561462),\n",
+       " ('.', 167538),\n",
+       " ('the', 163389),\n",
+       " ('a', 79321),\n",
+       " ('and', 74385),\n",
+       " ('of', 69009),\n",
+       " ('to', 68974),\n",
+       " ('br', 52637),\n",
+       " ('is', 50083),\n",
+       " ('it', 48327),\n",
+       " ('i', 46880),\n",
+       " ('in', 43753),\n",
+       " ('this', 40920),\n",
+       " ('that', 37615),\n",
+       " ('s', 31546),\n",
+       " ('was', 26291),\n",
+       " ('movie', 24965),\n",
+       " ('for', 21927),\n",
+       " ('but', 21781),\n",
+       " ('with', 20878)]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Examine the counts of the most common words in negative reviews\n",
-    "negative_counts.most_common()"
+    "negative_counts.most_common()[:20]"
    ]
   },
   {
@@ -337,17 +420,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 54,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create Counter object to store positive/negative ratios\n",
     "pos_neg_ratios = Counter()\n",
     "\n",
     "# TODO: Calculate the ratios of positive and negative uses of the most common words\n",
-    "#       Consider words to be \"common\" if they've been used at least 100 times"
+    "#       Consider words to be \"common\" if they've been used at least 100 times\n",
+    "\n",
+    "for word, count in total_counts.most_common():\n",
+    "    if count>=100:\n",
+    "        pos_neg_ratios[word] = positive_counts[word]/float(negative_counts[word]+1)"
    ]
   },
   {
@@ -359,11 +444,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pos-to-neg ratio for 'the' = 1.0607993145235326\n",
+      "Pos-to-neg ratio for 'amazing' = 4.022813688212928\n",
+      "Pos-to-neg ratio for 'terrible' = 0.17744252873563218\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Pos-to-neg ratio for 'the' = {}\".format(pos_neg_ratios[\"the\"]))\n",
     "print(\"Pos-to-neg ratio for 'amazing' = {}\".format(pos_neg_ratios[\"amazing\"]))\n",
@@ -394,13 +487,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3919815802404802"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO: Convert ratios to logs"
+    "# TODO: Convert ratios to logs\n",
+    "for word, ratio in pos_neg_ratios.most_common():\n",
+    "    pos_neg_ratios[word]=np.log(ratio)\n",
+    "\n",
+    "pos_neg_ratios['amazing']"
    ]
   },
   {
@@ -412,11 +518,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pos-to-neg ratio for 'the' = 0.05902269426102881\n",
+      "Pos-to-neg ratio for 'amazing' = 1.3919815802404802\n",
+      "Pos-to-neg ratio for 'terrible' = -1.7291085042663878\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Pos-to-neg ratio for 'the' = {}\".format(pos_neg_ratios[\"the\"]))\n",
     "print(\"Pos-to-neg ratio for 'amazing' = {}\".format(pos_neg_ratios[\"amazing\"]))\n",
@@ -440,23 +554,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('edie', 4.6913478822291435),\n",
+       " ('paulie', 4.07753744390572),\n",
+       " ('felix', 3.152736022363656),\n",
+       " ('polanski', 2.8233610476132043),\n",
+       " ('matthau', 2.80672172860924),\n",
+       " ('victoria', 2.681021528714291),\n",
+       " ('mildred', 2.6026896854443837),\n",
+       " ('gandhi', 2.538973871058276),\n",
+       " ('flawless', 2.451005098112319),\n",
+       " ('superbly', 2.26002547857525)]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# words most frequently seen in a review with a \"POSITIVE\" label\n",
-    "pos_neg_ratios.most_common()"
+    "pos_neg_ratios.most_common()[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('boll', -4.969813299576001),\n",
+       " ('uwe', -4.624972813284271),\n",
+       " ('seagal', -3.644143560272545),\n",
+       " ('unwatchable', -3.258096538021482),\n",
+       " ('stinker', -3.2088254890146994),\n",
+       " ('mst', -2.9502698994772336),\n",
+       " ('incoherent', -2.9368917735310576),\n",
+       " ('unfunny', -2.6922395950755678),\n",
+       " ('waste', -2.6193845640165536),\n",
+       " ('blah', -2.5704288232261625),\n",
+       " ('horrid', -2.4849066497880004),\n",
+       " ('pointless', -2.4553061800117097),\n",
+       " ('atrocious', -2.4259083090260445),\n",
+       " ('redeeming', -2.3682390632154826),\n",
+       " ('prom', -2.3608540011180215),\n",
+       " ('drivel', -2.3470368555648795),\n",
+       " ('lousy', -2.307572634505085),\n",
+       " ('worst', -2.286987896180378),\n",
+       " ('laughable', -2.264363880173848),\n",
+       " ('awful', -2.227194247027435),\n",
+       " ('poorly', -2.2207550747464135),\n",
+       " ('wasting', -2.204604684633842),\n",
+       " ('remotely', -2.1972245773362196),\n",
+       " ('existent', -2.0794415416798357),\n",
+       " ('boredom', -1.995100393246085),\n",
+       " ('miserably', -1.9924301646902063),\n",
+       " ('sucks', -1.987068221548821),\n",
+       " ('uninspired', -1.9832976811269336),\n",
+       " ('lame', -1.981767458946166),\n",
+       " ('insult', -1.978345424808467)]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# words most frequently seen in a review with a \"NEGATIVE\" label\n",
     "list(reversed(pos_neg_ratios.most_common()))[0:30]\n",
@@ -1945,7 +2115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
